for JPS JRE 16+ automatically apply "--add-opens" to jdk.compiler module to enable JPS features relying on reflection
(cherry picked from commit 53c3def4b252af3ff84ada6ea7d38fd1ea8cdcb3)

GitOrigin-RevId: d91866d3281ee3f97604084e88abbef66cbd9eed